# FeatEng

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
feateng/: codegen.py  data.py  evaluate.py  score.py  xgboost_model.py
feateng/provider/: __init__.py  anthropic.py  hf.py  openai.py  utility.py  vllm.py
