[metadata]
name = FeatEng
description = "Evaluating LLMs in Feature Engineering"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FeatEng/FeatEng
license = Apache-2.0
license_files = LICENSE
platform = any
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License

[options]
packages = find:
python_requires = >=3.9
dependency_links =
install_requires =
    numpy==1.26.1
    xgboost==2.1.1
    pandas==2.1.2
    scikit-learn==1.5.0
    evalplus @ git+https://github.com/evalplus/evalplus.git@v0.3.0#egg=evalplus

[options.entry_points]
console_scripts =
    feateng.evaluate = feateng.evaluate:main

[options.extras_require]
vllm = vllm>=0.5.1